[project]
name = "graphrag-v3"
version = "0.1.0"
description = "GraphRAG MCP server – GraphRAG のクエリ機能を MCP ツールとして公開する"
requires-python = ">=3.12"
dependencies = [
    "graphrag==3.0.6",
    "mcp>=1.0",
]

[project.scripts]
graphrag-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["main.py"]
