[project]
name = "graphrag-v3"
version = "0.1.0"
description = "GraphRAG MCP server – GraphRAG のクエリ機能を MCP ツールとして公開する"
requires-python = ">=3.12"
dependencies = [
    "graphrag>=3.0.6,<4.0",
    "mcp>=1.0,<2.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
# HTTP トランスポート（Azure App Service 等）で起動する場合に必要（uvicorn は本体依存に含まれる）
http = []

[project.scripts]
graphrag-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["main.py"]

# ---------------------------------------------------------------------------
# 開発用依存パッケージ
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

# ---------------------------------------------------------------------------
# Ruff（リンター＋フォーマッター）
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, S: bandit(security)
select = ["E", "F", "I", "UP", "S"]
ignore = [
    "E501", # line-too-long はフォーマッターに任せる
    "S101", # assert の使用を許可（テスト内）
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # テストファイルでは assert を許可

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
